	* implemented Atk interfaces in ags_automation_edit.c
	* implemented selection of automation editor
	* implemented ags_soundcard_get_loop(), ags_soundcard_set_loop() and ags_soundcard_get_loop_offset()
	* improved loop mode
	* improved AgsPad mutices in ags_pad_init_channel_launch_callback()
	* improved remove line effect and effect line effect
	* improved remove effect bulk effect
	* added mutices automation editor
	* added missing mutices to ags_navigation_callbacks.c
	* added mutices in ags_effect_bulk.c
	* added mutices in ags_line.c and ags_effect_line.c

ags (0.7.34)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed disapearing automation caused by missing tact factor appliance
	* fixed y value in ags_automation.c to gdouble because it was y previously
	* fixed missing souncard identifier in audio preferences
	* improved remove of notes by specify number of attempts until giving up
	* implemented cursor in automation editor
	* implemented copy, cut and paste in AgsAutomationEditor
	* implemented key-strokes in ags_automation_edit_callbacks.c
	* introduced new config key disable-feature because you don't want experimental code in production

ags (0.7.33)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* using AgsConversion in ags_line_member.c and ags_bulk_member.c if available
	* using bypass flag in ags_recall_audio_automate() and ags_recall_channel_automate()
	* using AgsConversion in automation editor
	* implemented reset of AGS_AUTOMATION_BYPASS in automation toolbar

ags (0.7.32)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed remove of menu after rename of AgsMachine
	* fixed update editor and automation editor after rename
	* fixed automation data
	* fixed missing XPath preamble of automation editor's machine radio button
	* fixed NULL pointer access in ags_automation_toolbar_apply_port()
	* implemented save/restore of ports within automation editor

ags (0.7.31)
